--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Panda MultiPurpose</title>
+<title>Panda MultiService</title>
 <meta name="description" content="">
 <meta name="author" content="">
 
@@ -37,7 +37,7 @@
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-      <a class="navbar-brand page-scroll" href="#page-top"><i class="fa fa-moon-o fa-rotate-90"></i>SAGIN Panda MultiPurpose Pvt.Ltd</a> </div>
+      <a class="navbar-brand page-scroll" href="#page-top"><i class="fa fa-moon-o fa-rotate-90"></i>Panda MultiService Pvt.Ltd</a> </div>
     
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -61,7 +61,7 @@
       <div class="container">
         <div class="row">
           <div class="intro-text">
-            <h1><span class="brand">Panda MultiPurpose Pvt.Ltd</span></h1>
+            <h1><span class="brand">Panda MultiService Pvt.Ltd</span></h1>
             <p>We are here to find solution and loves what we do</p>
             <a href="#services" class="btn btn-default btn-lg page-scroll">Discover More</a> </div>
         </div>
@@ -303,7 +303,7 @@
 <div id="footer">
   <div class="container text-center">
     <div class="fnav">
-      <p>Copyright &copy; 2019 Panda MultiPurpose Pvt.Ltd.</p>
+      <p>Copyright &copy; 2019 Panda MultiService Pvt.Ltd.</p>
     </div>
   </div>
 </div>
