--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="row">
           <div class="intro-text">
             <h1><span class="brand">Panda MultiService Pvt.Ltd</span></h1>
-            <p>We are here to find solution and loves what we do</p>
+            <p>We are here to find solution and love what we do</p>
             <a href="#services" class="btn btn-default btn-lg page-scroll">Discover More</a> </div>
         </div>
       </div>
