--- a/index.html
+++ b/index.html
@@ -214,48 +214,6 @@
     </div>
   </div>
 </div> -->
-<!-- Team Section -->
-<div id="team" class="text-center">
-  <div class="container">
-    <div class="col-md-8 col-md-offset-2 section-title">
-      <h2>Meet the Team</h2>
-    </div>
-    <div id="row">
-      <div class="col-md-3 col-sm-6 team">
-        <div class="thumbnail"> <img src="img/team/01.jpg" alt="..." class="img-circle team-img">
-          <div class="caption">
-            <h3>Bodhish Silpakar</h3>
-            <p>Founder / CEO</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3 col-sm-6 team">
-        <div class="thumbnail"> <img src="img/team/02.jpg" alt="..." class="img-circle team-img">
-          <div class="caption">
-            <h3>Sujit KC</h3>
-            <p>Manager</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3 col-sm-6 team">
-        <div class="thumbnail"> <img src="img/team/03.jpg" alt="..." class="img-circle team-img">
-          <div class="caption">
-            <h3>Shirish Shrestha</h3>
-            <p>Creative Director</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3 col-sm-6 team">
-        <div class="thumbnail"> <img src="img/team/04.jpg" alt="..." class="img-circle team-img">
-          <div class="caption">
-            <h3>Sajal Silpakar</h3>
-            <p>Project Manager</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 <!-- Contact Section -->
 <div id="contact" class="text-center">
   <div class="overlay">
@@ -293,6 +251,48 @@
             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
             <li><a href="#"><i class="fa fa-instagram"></i></a></li>
           </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Team Section -->
+<div id="team" class="text-center">
+  <div class="container">
+    <div class="col-md-8 col-md-offset-2 section-title">
+      <h2>Meet the Team</h2>
+    </div>
+    <div id="row">
+      <div class="col-md-3 col-sm-6 team">
+        <div class="thumbnail"> <!-- <img src="img/team/01.jpg" alt="..." class="img-circle team-img"> -->
+          <div class="caption">
+            <h3>Bodhish Silpakar</h3>
+            <p>Founder / CEO</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-6 team">
+        <div class="thumbnail"><!--  <img src="img/team/02.jpg" alt="..." class="img-circle team-img"> -->
+          <div class="caption">
+            <h3>Sujit KC</h3>
+            <p>Manager</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-6 team">
+        <div class="thumbnail"><!--  <img src="img/team/03.jpg" alt="..." class="img-circle team-img"> -->
+          <div class="caption">
+            <h3>Shirish Shrestha</h3>
+            <p>Creative Director</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-6 team">
+        <div class="thumbnail"> <!-- <img src="img/team/04.jpg" alt="..." class="img-circle team-img"> -->
+          <div class="caption">
+            <h3>Sajal Silpakar</h3>
+            <p>Project Manager</p>
+          </div>
         </div>
       </div>
     </div>
