--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@
         <li><a href="#page-top" class="page-scroll">Home</a></li>
         <li><a href="#services" class="page-scroll">Services</a></li>
         <li><a href="#about" class="page-scroll">About</a></li>
-        <!-- <li><a href="#portfolio" class="page-scroll">Portfolio</a></li> -->
         <li><a href="#contact" class="page-scroll">Apply</a></li>
-        <li><a href="#team" class="page-scroll">Team</a></li>
       </ul>
     </div>
     <!-- /.navbar-collapse --> 
@@ -62,7 +60,7 @@
         <div class="row">
           <div class="intro-text">
             <h1><span class="brand">Panda MultiService Pvt.Ltd</span></h1>
-            <p>We are here to find solution and love what we do</p>
+            <p>Your doorway to prosperous life</p>
             <a href="#services" class="btn btn-default btn-lg page-scroll">Discover More</a> </div>
         </div>
       </div>
@@ -78,19 +76,15 @@
     <div class="row">
       <div class="col-xs-6 col-md-3"> <i class="fa fa-desktop"></i>
         <h4>Faculty Management</h4>
-        <!-- <p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam.</p> -->
       </div>
       <div class="col-xs-6 col-md-3"> <i class="fa fa-gears"></i>
         <h4>Estate Management</h4>
-        <!-- <p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque.</p> -->
       </div>
       <div class="col-xs-6 col-md-3"> <i class="fa fa-rocket"></i>
         <h4>Office Support Services Management</h4>
-        <!-- <p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam.</p> -->
       </div>
       <div class="col-xs-6 col-md-3"> <i class="fa fa-line-chart"></i>
         <h4>WHY PANDA..?</h4>
-        <!-- <p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque.</p> -->
       </div>
     </div>
   </div>
@@ -102,146 +96,70 @@
       <h2>About Us</h2>
     </div>
     <div class="row">
-      <div class="col-xs-12 col-md-6"> <img src="img/about.jpg" class="img-responsive" alt=""> </div>
-      <div class="col-xs-12 col-md-6">
-        <div class="about-text">
-          <h4>Who We Are</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo.</p>
-          <!-- <h4>What We Do</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibh ante.</p>
-          <h4>Why Choose Us</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at.</p> -->
+      <div class="container">
+    <div id="row">
+      <div class="col-md-3 col-sm-6 team">
+        <div class="thumbnail">
+          <div class="caption">
+            <h3>Bodhish Silpakar</h3>
+            <p>Founder / CEO</p>
+          </div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor apibus lornare diam commodo nibh.</p>
         </div>
       </div>
+      <div class="col-md-3 col-sm-6 team">
+        <div class="thumbnail">
+          <div class="caption">
+            <h3>Sujit KC</h3>
+            <p>Manager</p>
+          </div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor apibus lornare diam commodo nibh.</p>
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-6 team">
+        <div class="thumbnail">
+          <div class="caption">
+            <h3>Shirish Shrestha</h3>
+            <p>Creative Director</p>
+          </div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor apibus lornare diam commodo nibh.</p>
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-6 team">
+        <div class="thumbnail">
+          <div class="caption">
+            <h3>Sajal Silpakar</h3>
+            <p>Project Manager</p>
+          </div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor apibus lornare diam commodo nibh.</p>
+        </div>
+      </div>
+    </div>
+  </div>
     </div>
   </div>
 </div>
-<!-- Portfolio Section -->
-<!-- <div id="portfolio"> -->
-  <!-- <div class="container"> -->
-    <!-- <div class="col-md-8 col-md-offset-2 section-title text-center"> -->
-      <!-- <h2>Our Portfolio</h2> -->
-<!--       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor apibus lornare diam commodo nibh.</p> -->
-<!--     </div>
-    <div class="categories">
-      <ul class="cat">
-        <li>
-          <ol class="type">
-            <li><a href="#" data-filter="*" class="active">All</a></li>
-            <li><a href="#" data-filter=".web">Web Design</a></li>
-            <li><a href="#" data-filter=".app">App Development</a></li>
-            <li><a href="#" data-filter=".branding">Branding</a></li>
-          </ol>
-        </li>
-      </ul>
-      <div class="clearfix"></div>
-    </div>
-    <div class="row">
-      <div class="portfolio-items">
-        <div class="col-sm-6 col-md-3 col-lg-3 web">
-          <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/01-large.jpg" title="Project description" rel="prettyPhoto">
-              <div class="hover-text">
-                <h4>Project Title</h4>
-                <small>Web Design</small> </div>
-              <img src="img/portfolio/01-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-3 col-lg-3 app">
-          <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/02-large.jpg" title="Project description" rel="prettyPhoto">
-              <div class="hover-text">
-                <h4>Project Title</h4>
-                <small>App Development</small> </div>
-              <img src="img/portfolio/02-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-3 col-lg-3 web">
-          <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/03-large.jpg" title="Project description" rel="prettyPhoto">
-              <div class="hover-text">
-                <h4>Project Title</h4>
-                <small>Web Design</small> </div>
-              <img src="img/portfolio/03-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-3 col-lg-3 web">
-          <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/04-large.jpg" title="Project description" rel="prettyPhoto">
-              <div class="hover-text">
-                <h4>Project Title</h4>
-                <small>Web Design</small> </div>
-              <img src="img/portfolio/04-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-3 col-lg-3 app">
-          <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/05-large.jpg" title="Project description" rel="prettyPhoto">
-              <div class="hover-text">
-                <h4>Project Title</h4>
-                <small>App Development</small> </div>
-              <img src="img/portfolio/05-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-3 col-lg-3 branding">
-          <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/06-large.jpg" title="Project description" rel="prettyPhoto">
-              <div class="hover-text">
-                <h4>Project Title</h4>
-                <small>Branding</small> </div>
-              <img src="img/portfolio/06-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-3 col-lg-3 branding app">
-          <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/07-large.jpg" title="Project description" rel="prettyPhoto">
-              <div class="hover-text">
-                <h4>Project Title</h4>
-                <small>App Development, Branding</small> </div>
-              <img src="img/portfolio/07-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-3 col-lg-3 web">
-          <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/08-large.jpg" title="Project description" rel="prettyPhoto">
-              <div class="hover-text">
-                <h4>Project Title</h4>
-                <small>Web Design</small> </div>
-              <img src="img/portfolio/08-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div> -->
 <!-- Contact Section -->
 <div id="contact" class="text-center">
   <div class="overlay">
     <div class="container">
       <div class="col-md-8 col-md-offset-2 section-title">
-        <h2>Drop Your CV Here</h2>
+        <h2>Upload Cv Here</h2>
       </div>
       <div class="col-md-8 col-md-offset-2">
         <form name="sentMessage" id="contactForm" method="post" enctype="multipart/form-data" novalidate>
           <div class="row">
             <div class="col-md-12">
               <div class="form-group">
-                <!-- <input type="text" id="name" class="form-control" placeholder="Upload Here" required="required"> -->
-                <input type="file" id="name" class="form-control"  placeholder="Upload Here" name="fileToUpload" id="fileToUpload" required="required>
+                <input type="file" id="cv" class="form-control"  placeholder="Upload Here" name="fileToUpload" id="fileToUpload" required="required>
                 <p class="help-block text-danger"></p>
               </div>
             </div>
-            <!-- <div class="col-md-6">
-              <div class="form-group">
-                <input type="email" id="email" class="form-control" placeholder="Email" required="required">
-                <p class="help-block text-danger"></p>
-              </div>
-            </div> -->
           </div>
-          <!-- <div class="form-group">
+          <div class="form-group">
             <textarea name="message" id="message" class="form-control" rows="4" placeholder="Message" required></textarea>
             <p class="help-block text-danger"></p>
-          </div> -->
+          </div>
           <div id="success"></div>
           <button type="submit" class="btn btn-default">SEND</button>
         </form>
@@ -251,48 +169,6 @@
             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
             <li><a href="#"><i class="fa fa-instagram"></i></a></li>
           </ul>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- Team Section -->
-<div id="team" class="text-center">
-  <div class="container">
-    <div class="col-md-8 col-md-offset-2 section-title">
-      <h2>Meet the Team</h2>
-    </div>
-    <div id="row">
-      <div class="col-md-3 col-sm-6 team">
-        <div class="thumbnail"> <!-- <img src="img/team/01.jpg" alt="..." class="img-circle team-img"> -->
-          <div class="caption">
-            <h3>Bodhish Silpakar</h3>
-            <p>Founder / CEO</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3 col-sm-6 team">
-        <div class="thumbnail"><!--  <img src="img/team/02.jpg" alt="..." class="img-circle team-img"> -->
-          <div class="caption">
-            <h3>Sujit KC</h3>
-            <p>Manager</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3 col-sm-6 team">
-        <div class="thumbnail"><!--  <img src="img/team/03.jpg" alt="..." class="img-circle team-img"> -->
-          <div class="caption">
-            <h3>Shirish Shrestha</h3>
-            <p>Creative Director</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3 col-sm-6 team">
-        <div class="thumbnail"> <!-- <img src="img/team/04.jpg" alt="..." class="img-circle team-img"> -->
-          <div class="caption">
-            <h3>Sajal Silpakar</h3>
-            <p>Project Manager</p>
-          </div>
         </div>
       </div>
     </div>
@@ -310,7 +186,7 @@
 <script type="text/javascript" src="js/SmoothScroll.js"></script> 
 <script type="text/javascript" src="js/jquery.prettyPhoto.js"></script> 
 <script type="text/javascript" src="js/jquery.isotope.js"></script> 
-<script type="text/javascript" src="js/jqBootstrapValidation.js"></script> 
+<script type="text/javascript" src="js/jqBootstrapValidation.js"></script>
 <script type="text/javascript" src="js/contact_me.js"></script> 
 <script type="text/javascript" src="js/main.js"></script>
 </body>
