--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class="thumbnail">
           <div class="caption">
             <h3>Bodhish Silpakar</h3>
-            <p>Founder / CEO</p>
+            <h5>Founder / CEO</h5>
           </div>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor apibus lornare diam commodo nibh.</p>
         </div>
@@ -111,7 +111,7 @@
         <div class="thumbnail">
           <div class="caption">
             <h3>Sujit KC</h3>
-            <p>Manager</p>
+            <h5>Manager</h5>
           </div>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor apibus lornare diam commodo nibh.</p>
         </div>
@@ -120,7 +120,7 @@
         <div class="thumbnail">
           <div class="caption">
             <h3>Shirish Shrestha</h3>
-            <p>Creative Director</p>
+            <h5>Creative Director</h5>
           </div>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor apibus lornare diam commodo nibh.</p>
         </div>
@@ -129,7 +129,7 @@
         <div class="thumbnail">
           <div class="caption">
             <h3>Sajal Silpakar</h3>
-            <p>Project Manager</p>
+            <h5>Project Manager</h5>
           </div>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor apibus lornare diam commodo nibh.</p>
         </div>
