[fix] mail success fail

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <h2>Upload Cv Here</h2>
       </div>
       <div class="col-md-8 col-md-offset-2">
-        <form name="sentMessage" id="contactForm" method="post" enctype="multipart/form-data" novalidate>
+        <form name="sentMessage" id="contactForm" method="post" enctype="multipart/form-data">
           <div class="row">
             <div class="col-md-12">
               <div class="form-group">
@@ -165,7 +165,7 @@
         </form>
         <div class="social">
           <ul>
-            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+            <li><a href="https://www.facebook.com/999.Monsters"><i class="fa fa-facebook"></i></a></li>
             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
             <li><a href="#"><i class="fa fa-instagram"></i></a></li>
           </ul>
