--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="form-group">
-                <input type="file" id="cv" class="form-control"  placeholder="Upload Here" name="fileToUpload" id="fileToUpload" required="required>
+                <input type="file" id="cv" class="form-control"  placeholder="Upload Here" name="fileToUpload" id="fileToUpload" required="required">
                 <p class="help-block text-danger"></p>
               </div>
             </div>
@@ -166,8 +166,8 @@
         <div class="social">
           <ul>
             <li><a href="https://www.facebook.com/999.Monsters"><i class="fa fa-facebook"></i></a></li>
-            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+            <li><a href="https://twitter.com/Saginbajrachar2"><i class="fa fa-twitter"></i></a></li>
+            <li><a href="https://www.instagram.com/dead_stranger_ok/tagged/?hl=en"><i class="fa fa-instagram"></i></a></li>
           </ul>
         </div>
       </div>
