[fix] -ground up design

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <div class="intro-text">
             <h1><span class="brand">Panda MultiService Pvt.Ltd</span></h1>
             <p>Your doorway to prosperous life</p>
-            <a href="#services" class="btn btn-default btn-lg page-scroll">Discover More</a> </div>
+            <a href="#services" class="btn btn-default btn-lg page-scroll">Learn More</a> </div>
         </div>
       </div>
     </div>
@@ -104,7 +104,7 @@
             <h3>Bodhish Silpakar</h3>
             <h5>Founder / CEO</h5>
           </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor apibus lornare diam commodo nibh.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor apibus lornare diam commodo nibh this space is managed according to the text length longer is ok.</p>
         </div>
       </div>
       <div class="col-md-3 col-sm-6 team">
@@ -113,7 +113,7 @@
             <h3>Sujit KC</h3>
             <h5>Manager</h5>
           </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor apibus lornare diam commodo nibh.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor apibus lornare diam commodo nibh this space is managed according to the text length longer is ok.</p>
         </div>
       </div>
       <div class="col-md-3 col-sm-6 team">
@@ -122,7 +122,7 @@
             <h3>Shirish Shrestha</h3>
             <h5>Creative Director</h5>
           </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor apibus lornare diam commodo nibh.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor apibus lornare diam commodo nibh this space is managed according to the text length longer is ok.</p>
         </div>
       </div>
       <div class="col-md-3 col-sm-6 team">
@@ -131,7 +131,7 @@
             <h3>Sajal Silpakar</h3>
             <h5>Project Manager</h5>
           </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor apibus lornare diam commodo nibh.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor apibus lornare diam commodo nibh this space is managed according to the text length longer is ok.</p>
         </div>
       </div>
     </div>
