[fix] -line-height

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="form-group">
-                <input type="file" id="cv" class="form-control"  placeholder="Upload Here" name="fileToUpload" id="fileToUpload" required="required">
+                <input type="file" class="form-control" name="fileToUpload" id="fileToUpload" required="required">
                 <p class="help-block text-danger"></p>
               </div>
             </div>
