--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <h2>Upload Cv Here</h2>
       </div>
       <div class="col-md-8 col-md-offset-2">
-        <form name="sentMessage" id="contactForm" method="post" enctype="multipart/form-data">
+        <form name="sentMessage" id="contactForm" method="post" enctype="multipart/form-data" data-netlify="true">
           <div class="row">
             <div class="col-md-12">
               <div class="form-group">
