--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 <script type="text/javascript" src="js/jquery.prettyPhoto.js"></script> 
 <script type="text/javascript" src="js/jquery.isotope.js"></script> 
 <script type="text/javascript" src="js/jqBootstrapValidation.js"></script>
-<script type="text/javascript" src="js/contact_me.js"></script> 
+<!-- <script type="text/javascript" src="js/contact_me.js"></script>  -->
 <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
