--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       </div>
       <div class="col-md-8 col-md-offset-2">
         <form 
-              name="sentMessage" 
+              name="Apply_form" 
               id="contactForm" 
               method="post" 
               enctype="multipart/form-data" 
