--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             </div>
           </div>
           <div class="form-group">
-            <textarea name="message" id="message" class="form-control" rows="4" placeholder="Message" required></textarea>
+            <textarea name="message" id="message" class="form-control" rows="4" placeholder="Message"></textarea>
             <p class="help-block text-danger"></p>
           </div>
           <div id="success"></div>
