--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
           <div class="intro-text">
             <h1><span class="brand">Panda MultiServices Pvt.Ltd</span></h1>
             <p>Your doorway to prosperous life</p>
+            <p>People And Nation Development Agency</p>
             <a href="#services" class="btn btn-default btn-lg page-scroll">Learn More</a> </div>
         </div>
       </div>
