--- a/index.html
+++ b/index.html
@@ -157,9 +157,15 @@
               data-netlify-honeypot="bot-field">
 
           <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-6">
               <div class="form-group">
                 <input type="file" class="form-control" name="fileToUpload" id="fileToUpload" required="required">
+                <p class="help-block text-danger"></p>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <input type="text" class="form-control" placeholder="Email" name="email" id="email" required="required">
                 <p class="help-block text-danger"></p>
               </div>
             </div>
