--- a/index.html
+++ b/index.html
@@ -159,13 +159,13 @@
           <div class="row">
             <div class="col-md-6">
               <div class="form-group">
-                <input type="file" class="form-control" name="fileToUpload" id="fileToUpload" required="required">
+                <input type="file" class="form-control" name="CV" id="fileToUpload" required="required">
                 <p class="help-block text-danger"></p>
               </div>
             </div>
             <div class="col-md-6">
               <div class="form-group">
-                <input type="text" class="form-control" placeholder="Email" name="email" id="email" required="required">
+                <input type="text" class="form-control" placeholder="Email" name="Candidate's Email" id="email" required="required">
                 <p class="help-block text-danger"></p>
               </div>
             </div>
