--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#page-top" class="page-scroll">Home</a></li>
             <li><a href="#services" class="page-scroll">Services</a></li>
-            <li><a href="#services" class="page-scroll">News</a></li>
+            <!-- <li><a href="#services" class="page-scroll">News</a></li> -->
             <li><a href="#about" class="page-scroll">About</a></li>
             <li><a href="#contact" class="page-scroll">Apply</a></li>
           </ul>
