--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]
 -->
-
+<style>
+@import url('https://fonts.googleapis.com/css?family=Merriweather');
+</style>
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
