about us explained

--- a/index.html
+++ b/index.html
@@ -107,43 +107,49 @@
     <div class="col-md-8 col-md-offset-2 section-title text-center">
       <h2>About Us</h2>
     </div>
+     <p></p>
+
     <div class="row">
       <div class="container">
     <div id="row">
       <div class="col-md-3 col-sm-6 team">
         <div class="thumbnail">
           <div class="caption">
-            <h3>Bodhish Silpakar</h3>
-            <h5>Founder / CEO</h5>
+            <h3>Shirish Shrestha</h3>
+            <h5>CEO</h5>
           </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor apibus lornare diam commodo nibh this space is managed according to the text length longer is ok.</p>
         </div>
       </div>
       <div class="col-md-3 col-sm-6 team">
         <div class="thumbnail">
           <div class="caption">
             <h3>Sujit KC</h3>
-            <h5>Manager</h5>
+            <h5>Executive Director</h5>
           </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor apibus lornare diam commodo nibh this space is managed according to the text length longer is ok.</p>
         </div>
       </div>
       <div class="col-md-3 col-sm-6 team">
         <div class="thumbnail">
           <div class="caption">
-            <h3>Shirish Shrestha</h3>
-            <h5>Creative Director</h5>
+            <h3>Bodhish Silpakar</h3>
+            <h5>General Manager</h5>
           </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor apibus lornare diam commodo nibh this space is managed according to the text length longer is ok.</p>
         </div>
       </div>
       <div class="col-md-3 col-sm-6 team">
         <div class="thumbnail">
           <div class="caption">
             <h3>Sajal Silpakar</h3>
-            <h5>Project Manager</h5>
+            <h5>Marketing Director</h5>
           </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor apibus lornare diam commodo nibh this space is managed according to the text length longer is ok.</p>
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-6 team">
+        <div class="thumbnail">
+          <div class="caption">
+            <h3>Sajan Bajracharya</h3>
+            <h5>Senior Consultant</h5>
+          </div>
         </div>
       </div>
     </div>
