--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <div class="thumbnail">
           <div class="caption">
             <h3>Sajal Silpakar</h3>
-            <h5>Marketing Director</h5>
+            <h5>Creative Director</h5>
           </div>
         </div>
       </div>
