added our services content

--- a/index.html
+++ b/index.html
@@ -84,16 +84,29 @@
   <div class="container">
     <div class="col-md-8 col-md-offset-2 section-title">
       <h2>Our Services</h2>
+      <p>
+        People And Nation Development Agency(PANDA) is a multi-service providing company working for the development of people of the nation and the nation itself. It is providing varieties of services regarding hr solutions, social media marketing, event organizing, etc.
+     </p>
     </div>
     <div class="row">
       <div class="col-xs-6 col-md-3"> <i class="fa fa-desktop"></i>
         <h4>Faculty Management</h4>
+        <p>
+        They perform their work with their core principles of equality in opportunity, faultless operation, clarity of purpose, simplicity in process and trust build environment.
+        </p>
       </div>
       <div class="col-xs-6 col-md-3"> <i class="fa fa-gears"></i>
         <h4>Estate Management</h4>
+        <p>
+        The Brand that will thrive in the coming years are the ones those have a Purpose beyond Profit.
+        So do we have a purpose beyond Profit and it is to develop People by Hr Solution and Nation by supporting NGOs.
+        </p>
       </div>
       <div class="col-xs-6 col-md-3"> <i class="fa fa-rocket"></i>
         <h4>Office Support Services Management</h4>
+        <p>
+        It have the best qualified and experienced team of management who are highly dedicated at their job and ready to perform their best for the development of the people and the nation.
+        </p>
       </div>
       <div class="col-xs-6 col-md-3"> <i class="fa fa-line-chart"></i>
         <h4>WHY PANDA..?</h4>
