change made to services

--- a/index.html
+++ b/index.html
@@ -84,9 +84,6 @@
   <div class="container">
     <div class="col-md-8 col-md-offset-2 section-title">
       <h2>Our Services</h2>
-      <p>
-        People And Nation Development Agency(PANDA) is a multi-service providing company working for the development of people of the nation and the nation itself. It is providing varieties of services regarding hr solutions, social media marketing, event organizing, etc.
-     </p>
     </div>
     <div class="row">
       <div class="col-xs-6 col-md-3"> <i class="fa fa-desktop"></i>
@@ -176,7 +173,7 @@
           <div class="col-sm-6 team">
             <div class="thumbnail">
               <div class="caption">
-                <h4>Bodhish Silpakar</h4>
+                <h4>Bodhish Ananda Shilpakar</h4>
                 <h5>General Manager</h5>
               </div>
             </div>
@@ -185,8 +182,8 @@
           <div class="col-sm-6 team">
             <div class="thumbnail">
               <div class="caption">
-                <h4>Sajal Silpakar</h4>
-                <h5>Marketing Director</h5>
+                <h4>Sajal Shilpakar</h4>
+                <h5>Creative Director</h5>
               </div>
             </div>
           </div>
