--- a/index.html
+++ b/index.html
@@ -131,19 +131,20 @@
       <div class="container">
         
         <div class="col-12 team"> 
-          <p> PANDA<br>
-              People And Nation Development Agency<br>
-              What is PANDA?<br>
+          <p> WE ARE PANDA<br>
               -People And Nation Development Agency(PANDA) is a multi-service providing company working for the development of people of the nation and the nation itself. It is providing varieties of services regarding hr solutions, social media marketing, event organizing, etc.
               <br>
-              Why PANDA?<br>
-              -It have the best qualified and experienced team of management who are highly dedicated at their job and ready to perform their best for the development of the people and the nation.
               <br>
-              How does PANDA do their job?<br>
-              -They perform their work with their core principles of equality in opportunity, faultless operation, clarity of purpose, simplicity in process and trust build environment.
+              PANDA CULTURE<br>
+              -We perform our work with core principles of equality in opportunity, faultless operation, clarity of purpose, simplicity in process and trust build environment.
+              <br>
+              <br>
+              WHY PANDA?<br>
+              -With the well qualified and experienced team of management we are highly dedicated at our work and ready to perform our best for the development of the people and the nation.
+              <br>
               <br>
               The Brand that will thrive in the coming years are the ones those have a Purpose beyond Profit.<br>
-              So do we have a purpose beyond Profit and it is to develop People by Hr Solution and Nation by supporting NGOs.<br>
+              We have a purpose beyond Profit to strive, to develop with our People and Nation.<br>
           </p>
         </div>
         <hr class="animate_border">
